# AVR-OS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.conf  build.json  build.py  build_utils.py  buildz.json  update_configurations.py
examples/: main.c
includes/: modularos.h
includes/modularos-core/: asm.h  macros.h  mutex.h  pch.h  queue.h  scheduler.h  system.h  tasks.h
includes/modularos-platforms/: arduino.h
includes/modularos-usart/: usart.h
modularos-core/: CMakeLists.txt  asm.c  module.json  mutex.c  queue.c  scheduler.c  system.c  tasks.c
modularos-usart/: CMakeLists.txt  module.json  usart.c
